--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ body {
 }
 
 a {
-  color: inherit;
+  color: #0070f3;
   text-decoration: none;
 }
 
@@ -35,4 +35,5 @@ ul {
 button {
   padding: 0.5rem 1rem;
   font-weight: bold;
+  cursor: pointer;
 }
